# amazonia

./: .gitignore  LICENSE  amazonia.cabal  amazonka-test.cabal  dev.sh  stack-template.json
src/: Bucket.hs  Image.hs  Main.hs  Run.hs  Stack.hs
