name:                amazonia
version:             0.1.0.0
synopsis:            Trying out amazonka AWS bindings.
description:         Trying out amazonka AWS bindings.
license:             BSD3
license-file:        LICENSE
author:              Lazar Bodor
maintainer:          lazar.bodor@gmail.com
category:            aws
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     github
  location: http://github.com/lbodor/amazonia

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Run, Image
  build-depends:       
                       amazonka,
                       amazonka-core,
                       amazonka-ec2,
                       amazonka-s3,
                       base >=4.8 && <4.9,
                       base64-bytestring,
                       bytestring,
                       lens,
                       mmorph,
                       mtl,
                       retry,
                       safe,
                       text,
                       time

executable amazonia
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Run, Image
  build-depends:       
                       amazonka,
                       amazonka-core,
                       amazonka-ec2,
                       amazonka-s3,
                       amazonka-cloudformation,
                       base >=4.8 && <4.9,
                       base64-bytestring,
                       bytestring,
                       http-client,
                       http-conduit,
                       lens,
                       optparse-applicative,
                       mmorph,
                       mtl,
                       retry,
                       resourcet,
                       text,
                       time

